tests/files/lexer_tests/should_fail/014.cmdr
// Illegal character in string (ascii 14)
var = '';